[package]
name = "pyscan"
version = "0.1.5"
edition = "2021"
authors = ["Aswin <aswinxn@protonmail.com>"]
license = "MIT"
description = "python dependency vulnerability scanner"
readme = "README.md"
homepage = "https://github.com/aswinnnn/pyscan"
repository = "https://github.com/aswinnnn/pyscan"
keywords = ["cli", "python", "security", "vulnerability", "pentesting"]
categories = ["command-line-utilities"]


[dependencies]
chrono = "0.4.24"
clap = {version="4.2.1", features=["derive"]}
console = "0.15.5"
lazy_static = "1.4.0"
once_cell = "1.18.0"
pep-508 = "0.3.0"
regex = "1.7.3"
reqwest = {version="0.11.16", features=["blocking"]}
serde = {version="1.0.160", features=["derive", "serde_derive"]}
serde_json = "1.0.96"
toml = "0.7.3"
lenient_semver = { version = "0.4.2", features = [ "version_semver"] }
semver = "1.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
